# reinforcement-learning

./: .gitignore  README.md  pyproject.toml
chapter2/: 10_armed_testbed.py  bandit.py  bandit_learner.py  k_bandit.py
chapter2/scripts/: .10_armed_testbed.py.swp  10_armed_testbed.py
chapter2/scripts/bandit/: .bandit_learner.py.swp  __init__.py  bandit_class.py  bandit_learner.py
chapter3/: exercices_chapter_3.aux
docs/chapter2/scripts/: 10_armed_testbed.py  optimistic_initial_values.py
docs/chapter3/: exercices_chapter_3.tex
src/reinforcement_learning/chapter2/bandit/: __init__.py
